// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Saga Decorator should add metadata 1`] = `
{
  "aggregates": [
    [Function],
  ],
  "handlers": [],
  "name": "test_saga",
  "namespace": null,
  "target": [Function],
}
`;

exports[`Saga Decorator should add metadata with custom options 1`] = `
{
  "aggregates": [
    [Function],
  ],
  "handlers": [],
  "name": "custom_name",
  "namespace": "custom_namespace",
  "target": [Function],
}
`;
